@@ -1,12 +1,21 @@
-# Alt::Alien::FFI::System [![Build Status](https://secure.travis-ci.org/plicease/work.png)](http://travis-ci.org/plicease/work)
+# Alt::Alien::FFI::System [![Build Status](https://secure.travis-ci.org/plicease/Alt-Alien-FFI-System.png)](http://travis-ci.org/plicease/Alt-Alien-FFI-System)
 
-Simplified alternative to Alien::FFI that uses system libffi
+(Deprecated) Simplified alternative to Alien::FFI that uses system libffi
 
 # SYNOPSIS
 
     env PERL_ALT_INSTALL=OVERWRITE cpanm Alt::Alien::FFI::System
 
 # DESCRIPTION
+
+**DEPRECATED**: As noted below, this distribution was intended
+for use by system integrators packaging [FFI::Platypus](https://metacpan.org/pod/FFI::Platypus) that
+didn't want to add the real [Alien::FFI](https://metacpan.org/pod/Alien::FFI) and its dependencies
+to their build chain.  As of version 0.69, [FFI::Platypus](https://metacpan.org/pod/FFI::Platypus)
+will use `pkg-config` and the system `libffi` if it is already
+installed, and skip the install of [Alien::FFI](https://metacpan.org/pod/Alien::FFI). Thus, this
+module is now redundant.  It may be removed from CPAN, but not
+before January 1st 2020.
 
 This distribution provides an alternative implementation of
 [Alien::FFI](https://metacpan.org/pod/Alien::FFI) that is geared toward system integrators when
