@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use 5.008001;
 
-# ABSTRACT: Simplified alternative to Alien::FFI that uses system libffi
+# ABSTRACT: (Deprecated) Simplified alternative to Alien::FFI that uses system libffi
 # VERSION
 
 =head1 SYNOPSIS
@@ -12,6 +12,15 @@ use 5.008001;
  env PERL_ALT_INSTALL=OVERWRITE cpanm Alt::Alien::FFI::System
 
 =head1 DESCRIPTION
+
+B<DEPRECATED>: As noted below, this distribution was intended
+for use by system integrators packaging L<FFI::Platypus> that
+didn't want to add the real L<Alien::FFI> and its dependencies
+to their build chain.  As of version 0.69, L<FFI::Platypus>
+will use C<pkg-config> and the system C<libffi> if it is already
+installed, and skip the install of L<Alien::FFI>. Thus, this
+module is now redundant.  It may be removed from CPAN, but not
+before January 1st 2020.
 
 This distribution provides an alternative implementation of
 L<Alien::FFI> that is geared toward system integrators when
